# music-league

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  spotipy_oauth.txt  streamlit_app.py
.claude/: settings.local.json
.claude/skills/: _AST_GREP.md  _INDEX.md
.claude/skills/python/: SKILL.md
.claude/skills/source_control/: SKILL.md
.streamlit/: config.toml
cache/: metalicactopus_1_preprocessed.pkl  metalicactopus_1_summary.json  metalicactopus_2_bak_preprocessed.pkl  metalicactopus_2_bak_summary.json  metalicactopus_2_preprocessed.pkl  metalicactopus_2_preprocessed_bak.pkl  metalicactopus_2_summary.json  metalicactopus_2_summary_bak.json
data/metalicactopus_1/: competitors.csv  metalicactopus_1.gexf  rounds.csv  submissions.csv  votes.csv
data/metalicactopus_2/: rounds.csv  submissions.csv  votes.csv
data/metalicactopus_2_bak/: competitors.csv  rounds.csv  submissions.csv  votes.csv
pages/: 0_🏠_Home.py  1_🎵_Songs.py  2_🌟_Players.py  3_💬_Commentary_Booth.py  4_📈_Trends.py  5_🕸️_Connections.py  6_⚖️_Final_Scorecard.py
src/musicleague/: __init__.py  config.py
src/musicleague/dashboard/: __init__.py  helpers.py  narrative.py  theme.py
src/musicleague/data/: __init__.py  cache.py  loader.py  spotify.py
src/musicleague/metrics/: __init__.py  comments.py  comparisons.py  network.py  songs.py  submitters.py  voters.py
src/musicleague/scripts/: __init__.py  analyze.py  preprocess.py
src/musicleague/visualizations/: __init__.py  base.py  network.py  songs.py  submitters.py  voters.py
static/: style.css
